--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
       }
       input[type="text"],
       input[type="password"] {
-        width: 90%;
+        width: 100%;
         padding: 8px;
         margin: 8px 0;
         border: 1px solid #ccc;
@@ -166,9 +166,9 @@
       <a href="/page5">หน้า 5</a>
     </nav>
 
-    <div class="container">{% block content %}{% endblock %}</div>
+    <div class="container" style="height: calc(100vh - 148px);">{% block content %}{% endblock %}</div>
 
-    <footer>© 2025 วิทยาลัยอาชีวศึกษานครปฐม | ระบบควบคุมทรัพย์สิน</footer>
+    <footer class="sticky-bottom">© 2025 วิทยาลัยอาชีวศึกษานครปฐม | ระบบควบคุมทรัพย์สิน</footer>
 
     <!-- Modal Login -->
     <div id="loginModal" class="modal">
