--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <h3>เข้าสู่ระบบ</h3>
 {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
 <form method="post">
-    <label class="center w-100">ชื่อผู้ใช้:</label><br>
+    <label class="center w-100">ชื่อผู้ใช้:นะ</label><br>
     <input class="form-control" type="text" placeholder="Username">
     <label class="center w-100">รหัสผ่าน:</label><br>
     <input class="form-control" type="password" placeholder="Password">
