--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,13 @@
-{% extends "base.html" %}
-{% block content %}
-<h3>ยินดีต้อนรับเข้าสู่ระบบควบคุมทรัพย์สิน</h3>
-<p>ระบบนี้ใช้สำหรับจัดการข้อมูลครุภัณฑ์ หมวดหมู่ และบัญชีคุมทรัพย์สินของวิทยาลัยอาชีวศึกษานครปฐม</p>
+{% extends "base.html" %} {% block content %}
+<div
+  class="d-flex justify-content-center align-items-center flex-column text-center"
+  style="height: calc(100vh - 200px)"
+>
+  <h1 class="h4">ยินดีต้อนรับเข้าสู่ระบบควบคุมทรัพย์สิน</h1>
+  <p class="lead">
+    ระบบนี้ใช้สำหรับจัดการข้อมูลครุภัณฑ์ หมวดหมู่
+    และบัญชีคุมทรัพย์สินของวิทยาลัยอาชีวศึกษานครปฐม
+  </p>
+</div>
+
 {% endblock %}
