--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,13 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <h3>เข้าสู่ระบบ</h3>
-{% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
+{% if error %}
+<p style="color: red">{{ error }}</p>
+{% endif %}
 <form method="post">
-    <label class="center w-100">ชื่อผู้ใช้:นะ</label><br>
-    <input class="form-control" type="text" placeholder="Username">
-    <label class="center w-100">รหัสผ่าน:</label><br>
-    <input class="form-control" type="password" placeholder="Password">
-    <button type="submit">เข้าสู่ระบบ</button>
+  <label class="center w-100">ชื่อผู้ใช้:</label><br />
+  <input class="form-control" type="text" placeholder="Username" />
+  <label class="center w-100">รหัสผ่าน:</label><br />
+  <input class="form-control" type="password" placeholder="Password" />
+  <button type="submit">เข้าสู่ระบบ</button>
 </form>
 {% endblock %}
