--- a/templates/withdrawal.html
+++ b/templates/withdrawal.html
@@ -5,11 +5,16 @@
 <p class="h3 text-center">ทะเบียนใบเบิก-วัสดุ</p>
 <div><p class="h6 text-end">แบบ พ. 3105</p></div>
 
+<form method="get" class="mb-3 d-flex justify-content-end" action="">
+  <input type="text" name="q" class="form-control w-auto me-2" placeholder="ค้นหา..." value="{{ request.args.get('q', '') }}">
+  <button type="submit" class="btn btn-primary">ค้นหา</button>
+</form>
 <table
   class="table table-striped table-bordered table-hover text-center align-middle"
 >
   <thead class="table-primary">
     <tr>
+      <th scope="col">ลำดับที่</th>
       <th scope="col">ทะเบียนที่</th>
       <th scope="col">วันที่ลงทะเบียน</th>
       <th scope="col">เอกสาร</th>
@@ -20,16 +25,18 @@
     </tr>
   </thead>
   <tbody>
-    <!-- ใส่ข้อมูลตรงนี้ -->
+    {% for row in data %}
     <tr>
-      <td>001</td>
-      <td>04/09/2025</td>
-      <td>หนังสือราชการ</td>
-      <td>จาก กรมการศึกษา</td>
-      <td>แจ้งโครงการอบรม</td>
-      <td>05/09/2025</td>
-      <td>เอกสาร 123/2568</td>
+      <td>{{ loop.index }}</td>
+      <td>{{ row['Des_id'] }}</td>
+      <td>{{ row['Des_name'] }}</td>
+      <td>{{ row['keyword'] }}</td>
+      <td>{{ row['keyword'] }}</td>
+      <td>{{ row['keyword'] }}</td>
+      <td>{{ row['keyword'] }}</td>
+      <td>{{ row['keyword'] }}</td>
     </tr>
+    {% endfor %}
   </tbody>
 </table>
 
