--- a/templates/base.html
+++ b/templates/base.html
@@ -156,10 +156,14 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/page4">หน้า 4</a>
+              <a class="nav-link active" href="/asset_distribute"
+                >บัญชีคุมครุภัณฑ์จ่ายให้หน่วย</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/page5">หน้า 5</a>
+              <a class="nav-link active" href="/asset_control"
+                >บัญชีคุมครุภัณฑ์</a
+              >
             </li>
           </ul>
         </div>
